compiler/testData/diagnostics/tests/incompleteCode/dontReportFunctionDeclarationWithNoNameOnFunctionsWithoutFunKeyword.fir.kt
// ISSUE: KT-13741

class Foo {
    <!SYNTAX!>bar<!> <!SYNTAX!><!>{
    }
}
